Revert "Update composer.json"
This reverts commit b0c3220391c7f49365d6b6acf3af00ab5d6d2b9f.

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "php-di/php-di": "6.4.0",
         "wpmvc/database": "1.2.0",
         "wpmvc/request-validator": "1.1.0",
+        "wpmvc/routing": "1.1.1",
         "wpmvc/helpers": "0.0.3"
     },
     "require-dev": {
