--- a/composer.json
+++ b/composer.json
@@ -18,19 +18,19 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "php-di/php-di": "6.4.0",
+        "php": ">=8.1",
+        "php-di/php-di": "7.1.1",
         "wpmvc/database": "1.2.0",
         "wpmvc/request-validator": "1.1.0",
         "wpmvc/routing": "1.1.1",
         "wpmvc/helpers": "0.0.3"
     },
     "require-dev": {
-        "bamarni/composer-bin-plugin": "1.8.2",
-        "squizlabs/php_codesniffer": "3.7.2",
-        "dealerdirect/phpcodesniffer-composer-installer": "1.0.0",
-        "phpcompatibility/phpcompatibility-wp": "2.1.4",
-        "wp-coding-standards/wpcs": "^2.3"
+        "bamarni/composer-bin-plugin": "1.8.3",
+        "squizlabs/php_codesniffer": "^3.13.4",
+        "dealerdirect/phpcodesniffer-composer-installer": "1.2.0",
+        "phpcompatibility/phpcompatibility-wp": "2.1.8",
+        "wp-coding-standards/wpcs": "^3.3.0"
     },
     "config": {
         "allow-plugins": {
