--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
     ],
     "require": {
         "php": ">=7.4",
-        "symfony/dependency-injection": "5.4.48",
         "wpmvc/database": "1.3.2",
         "wpmvc/request-validator": "1.3.2",
         "wpmvc/routing": "1.3.2",
-        "wpmvc/helpers": "1.3.2"
+        "wpmvc/helpers": "1.3.2",
+        "wpmvc/container": "1.0.0"
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "1.8.2",
