--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "license": "MIT",
     "scripts": {
         "format": "vendor/bin/phpcbf --standard=phpcs.xml",
-        "phpcs": "vendor/bin/phpcs --standard=phpcs.xml --report-full --report-checkstyle=./phpcs-report.xml"
+        "phpcs": "vendor/bin/phpcs --standard=phpcs.xml --report-full --report-checkstyle=./phpcs-report.xml",
+        "test": "vendor/bin/phpunit",
+        "test:multisite": "vendor/bin/phpunit -c phpunit-multisite.xml",
+        "test:setup": "bash bin/install-wp-tests.sh wpmvc_test root '' 127.0.0.1 latest true"
     },
     "autoload": {
         "psr-4": {
@@ -30,12 +33,22 @@
         "squizlabs/php_codesniffer": "3.7.2",
         "dealerdirect/phpcodesniffer-composer-installer": "1.0.0",
         "phpcompatibility/phpcompatibility-wp": "2.1.4",
-        "wp-coding-standards/wpcs": "^2.3"
+        "wp-coding-standards/wpcs": "^2.3",
+        "phpunit/phpunit": "^9.6",
+        "mockery/mockery": "^1.6",
+        "yoast/phpunit-polyfills": "^2.0"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "WpMVC\\Tests\\": "tests/"
+        }
     },
     "config": {
         "allow-plugins": {
             "bamarni/composer-bin-plugin": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
